# pyneural

./: README.md  activation.py  activation_test.py  bidir_rnn_layer.py  bidir_rnn_layer_test.py  ce_crf_layer_test.py  ce_softmax_layer.py  ce_softmax_layer_test.py  dataset.py  dataset_test.py  drop_out_layer_test.py  embedding_layer.py  embedding_layer_test.py  gradient_check_test_shared.py  gru_layer.py  gru_layer_test.py  layers.py  layers_test.py  neural_layer_test.py  pyproject.toml  requirements.txt  rnn_batch_layer.py  rnn_batch_layer_test.py  rnn_layer.py  sample_fit_run.py  setup.py  sgd.py  sgd_test.py  softmax.py  trailing_rnn_layer.py  trailing_rnn_layer_test.py
pyneural/: activation.py  bidir_rnn_layer.py  ce_crf_layer.py  ce_l2_loss.py  ce_softmax_layer.py  ctypes.pxd  drop_out_layer.py  embedding_cy.pyx  embedding_layer.py  gru_layer.py  layers.py  misc_cy.pyx  neural_base.py  neural_layer.py  rnn_batch_layer.py  rnn_layer.py  sgd.py  softmax.py  trailing_rnn_layer.py
pyneural/test/: activation_test.py  bidir_rnn_layer_test.py  ce_crf_layer_test.py  ce_softmax_layer_test.py  dataset.py  drop_out_layer_test.py  embedding_layer_test.py  gradient_check.py  gradient_check_test_shared.py  gru_layer_test.py  layers_test.py  neural_layer_test.py  rnn_batch_layer_test.py  sgd_test.py  softmax_test.py  trailing_rnn_layer_test.py
samples/: context.py  dataset.py  sample_fit_run.py  timing_run.py
