# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "pyneural"
version = "0.1.0"
description="Neural Networks Framework using Python and Numpy"
readme = {file = "README.md", content-type = "text/markdown"}
license="AGPL-3.0"
license-files = ["LICENSE.txt"]
authors = [{name = "George Mavromatis"}]
requires-python = ">=3.9,<4.0"
dependencies = [
    "numpy>=1.23.0,<2.0.0",
    "pytest"
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: Only",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = [
    "setuptools>=80.0",
    "cython>=0.29.32,<3.0",
    "numpy>=1.23.0,<2.0.0"
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/gmavr/pyneural"
Repository = "https://github.com/gmavr/pyneural.git"
